--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ long_description_content_type = text/markdown
 #    Bug Tracker = 
 #    Documentation = 
 classifiers =
+    License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3
     Operating System :: OS Independent
     Topic :: Scientific/Engineering
