--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
 name = toolpy
 version = 0.1.0
-#author = 
-#author_email = 
-#description = 
+author = EltonCN 
+author_email = elton.nascimento@students.ic.unicamp.br
+description = ToolPy is a Python module made to facilitate the creation of tools using LLMs.
 long_description = file: README.md
 long_description_content_type = text/markdown
-#url = 
-#project_urls =
-#    Bug Tracker = 
+url = https://github.com/EltonCN/toolpy
+project_urls =
+    Bug Tracker = https://github.com/EltonCN/toolpy/issues
 #    Documentation = 
 classifiers =
     License :: OSI Approved :: MIT License
