--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = toolpy
+name = llm-toolpy
 version = 0.1.0
 author = EltonCN 
 author_email = elton.nascimento@students.ic.unicamp.br
