Fix: integrations init

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = llm-toolpy
-version = 0.2.0
+version = 0.2.1
 author = EltonCN 
 author_email = elton.nascimento@students.ic.unicamp.br
 description = ToolPy is a Python module made to facilitate the creation of tools using LLMs.
@@ -24,8 +24,8 @@ package_dir =
     = src
 packages = find:
 #python_requires = 
-install_requires =
-    numpy
+#install_requires =
+#    numpy
 
 
 [options.packages.find]
